frontend/test/should_fail/array_removeIf_exec_input_scalar.grg
rule array_removeIf_exec(ref a:array<double>) {
	modify {
		---
		exec({ aa:array<int> = a.removeIf{value:int -> value != 42} });
	}
}
